--- a/rate-that-bench/src/app/search/search.component.html
+++ b/rate-that-bench/src/app/search/search.component.html
@@ -1,4 +1,3 @@
-<button mat-button aria-label="detect-location"
-(click)="getLocation()">
-Search benches nearby
+<button mat-button aria-label="detect-location" (click)="getLocation()">
+  Search benches nearby
 </button>
