Redo deleted work :|

--- a/rate-that-bench/src/app/search/search.component.html
+++ b/rate-that-bench/src/app/search/search.component.html
@@ -1,3 +1,6 @@
 <button mat-button aria-label="detect-location" (click)="getLocation()">
   Search benches nearby
 </button>
+
+<!-- TODO: Move this -->
+<app-map></app-map>
